Fixed title shifting, adding interactive number displaying.
Bug: numbers inaccurate, calculated from scale.

--- a/51683a4d5705501cd25b927086d2ec088354fc55/html/styles.css
+++ b/51683a4d5705501cd25b927086d2ec088354fc55/html/styles.css
@@ -23,25 +23,6 @@ font-size: 120%;
 /* LINE CHART */
 path.line {
 fill: none;
-stroke: #ed3700;
-}
-
-path.line-1 {
-fill: none;
-stroke: #2b2929;
-stroke-dasharray: 2;
-}
-
-path.line-2 {
-fill: none;
-stroke: #69a3b2;
-stroke-dasharray: 6;
-}
-
-path.line-3 {
-fill: none;
-stroke: #69a3b2;
-stroke-dasharray: 4;
 }
 
 .serie_label {
@@ -55,6 +36,17 @@ font-size: 70%;
 fill: #2b2929;
 font-family: Georgia;
 font-size: 150%;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.x.axis path {
+  display: none;
 }
 
 /* POINTS */
